alteração no nome

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <div class="h2">
         <h2>Meus estudos</h2>
-        <a class="botao" href="Responsive Cards/index.html" target="_blank">Site</a>
+        <a class="botao" href="Responsive Cards/index.html" target="_blank">Responsive cards
+        </a>
     </div>
  </body>
 </html>
